# weather-forcast-cli

./: Cargo.toml  README.md
src/: env.rs  main.rs  models.rs  services.rs
