[package]
name = "weather-forcast-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.1" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
colored = { version = "2.0.0" }
lazy_static = { version = "1.5.0" }
dotenv = { version = "0.15.0" }